psp-migration/add-capabilities/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-capabilities
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
